--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Henna by Fathima - Timeless Elegance</title>
     <meta name="description" content="Henna by Fathima - Bespoke bridal henna designs blending traditional artistry with modern sophistication." />
     <meta name="author" content="Henna by Fathima" />
-    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image" content="" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
